# cursus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
brand/: preview-ios.html  preview-planes.html  preview.html
scripts/: gen-badges.mjs  gen-icon.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: 01_initial.sql  02_drafts_meta.sql  03_search_index.sql  04_sent_log.sql  05_messages_v2.sql  06_scheduled_sends.sql  07_rules.sql  08_account_sort_order.sql
src-tauri/src/: backup.rs  badge.rs  badge_data.rs  error.rs  lib.rs  main.rs  secrets.rs  win_notify_setup.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/imap/: client.rs  idle.rs  mod.rs  pool.rs  types.rs
src-tauri/src/parser/: mod.rs
src-tauri/src/smtp/: lettre_transport.rs  mod.rs  resend.rs  types.rs
src/components/: ErrorBoundary.tsx
src/components/composer/: Composer.tsx  RecipientsField.tsx
src/components/layout/: FolderContextMenu.tsx  MessageList.tsx  MessageView.tsx  ResizeHandle.tsx  Shell.tsx  Sidebar.tsx  TitleBar.tsx
src/components/mail/: Avatar.tsx  CategoryTabs.tsx  HtmlViewer.tsx  MessageRow.tsx  MoveToFolderPicker.tsx  RowContextMenu.tsx  SearchOverlay.tsx
src/lib/: autoDiscovery.test.ts  autoDiscovery.ts  autostart.ts  badge.ts  closeToTray.ts  db.ts  inlineImages.test.ts  inlineImages.ts  ipc.ts  keyboard.ts  logger.ts  notifications.ts  outbox.ts  rules.test.ts  rules.ts  sender.test.ts  sender.ts  settings.ts  snooze.test.ts  snooze.ts  threadMessages.ts  time.test.ts  time.ts  updates.ts  window.ts
src/stores/: accounts.ts  bodies.ts  composer.ts  threads.ts  toasts.ts  ui.ts
src/styles/: globals.css
src/types/: index.ts
tools/: launch-cursus.ps1
(+8 files in other folders)
