[package]
name = "flow-mail"
version = "0.1.0"
description = "Cursus — lightweight cross-platform email client"
authors = ["Cursus contributors"]
license = "Apache-2.0"
repository = "https://github.com/opencursus/cursus"
homepage = "https://opencursus.app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Cursus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["tray-icon", "devtools"] }
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
log = "0.4"

tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt", "rt-multi-thread", "time"] }
futures = "0.3"

async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
mail-parser = "0.9"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }

base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
utf7-imap = "0.3"
socket2 = "0.5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_Foundation",
] }
